@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.playthis"
        name="PlayThis"
-       version="3.1.0~alpha1"
+       version="3.1.0~alpha2"
        provider-name="anxdpanic">
     <requires>
         <import addon="xbmc.python" version="2.20.0"/>
@@ -13,6 +13,7 @@
     </extension>
     <extension point="xbmc.addon.metadata">
         <news>
+- add 'Cast to remote PlayThis'
 - add 'Export to .strm'
 - add thumbnail support
 - update and improve dash support
