@@ -47,7 +47,7 @@ MODES = __enum(
     URLRESOLVER='urlresolver',
     EXPORT_STRM='export_strm',
     EXPORT_M3U='export_m3u',
-    REFRESH='refresh',
+    CASTREMOTE='cast_remote',
     RENAME='rename',
     CHANGETHUMB='changethumb',
     CLEARCACHE='clearcache',
