@@ -1,4 +1,5 @@
 3.1.0
+- add 'Cast to remote PlayThis'
 - add 'Export to .strm'
 - add thumbnail support
 - update and improve dash support
